<resources>
    <string name="app_name">Learning Android</string>
    <string name="bio_screen_header">Enter your data</string>
    <string name="name_textField_hint">Enter your name</string>
    <string name="phone_textField_hint">Enter your phone number</string>
    <string name="email_textField_hint">Enter your email address</string>
    <string name="address_textField_hint">Enter your address</string>
    <string name="submit">Submit</string>
    <string name="login_form_header_label">Login Form</string>
    <string name="password_textField_hint">Enter your password</string>
    <string name="no_account_yet"> No account yet?</string>
    <string name="sign_up_text">Sign up</string>
    <string name="login">Login</string>
    <string name="dice_image_des">show dice in this image placeholder</string>
    <string name="roll_dice">Roll Dice</string>
    <string name="sms_textField_hint">Your message here....</string>
    <string name="send_sms">Send SMS</string>
    <string name="currency_converter_header_label">Dollar to Taka converter</string>
    <string name="enter_dollar">Enter Dollar</string>
    <string name="convert">Convert</string>
    <string name="activity_one_header">Activity One</string>
    <string name="send_data_to_activity_b">Send data to Activity B</string>
    <string name="activity_two_header">Activity two</string>
    <string name="go_to_listview">Go to listView</string>
</resources>