<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyBioLinearActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/bio_screen_header"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/name_textField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:autofillHints="no"
            android:hint="@string/name_textField_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/phone_textField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:autofillHints="no"
            android:hint="@string/phone_textField_hint"
            android:inputType="phone" />

        <EditText
            android:id="@+id/email_textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:autofillHints="no"
            android:hint="@string/email_textField_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/address_textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:autofillHints="no"
            android:hint="@string/address_textField_hint"
            android:inputType="textPostalAddress" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_gravity="center_horizontal"
            android:text="@string/submit"
            android:textAllCaps="false" />

    </LinearLayout>

</ScrollView>