<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SmsActivity">

    <EditText
        android:id="@+id/sms_phone_textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_2x"
        android:autofillHints="no"
        android:hint="@string/phone_textField_hint"
        android:inputType="phone" />

    <EditText
        android:id="@+id/sms_textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_2x"
        android:autofillHints="no"
        android:hint="@string/sms_textField_hint"
        android:inputType="textShortMessage" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_sms" />

</LinearLayout>